fixed spacing

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -30,7 +30,7 @@ map {
 }
 
 .row {
-	margin-top: 80px;
+	margin-top: 40px;
 }
 
 .form-control {
